[gd_scene load_steps=15 format=2]

[ext_resource path="res://Sprites/Enemigos/Bat/Bat4.png" type="Texture2D" id=1]
[ext_resource path="res://Sprites/Menus/5-2.png" type="Texture2D" id=2]
[ext_resource path="res://Sprites/Armas/LanzaLlamas/efecto_fuego.png" type="Texture2D" id=3]
[ext_resource path="res://Sprites/Enemigos/Bat/Bat1.png" type="Texture2D" id=4]
[ext_resource path="res://Sprites/Enemigos/Bat/Bat3.png" type="Texture2D" id=5]
[ext_resource path="res://Sprites/Enemigos/Bat/Bat2.png" type="Texture2D" id=6]
[ext_resource path="res://Scripts/Bat.gd" type="Script" id=7]
[ext_resource path="res://Sprites/Assets/light.png" type="Texture2D" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 11.0

[sub_resource type="CircleShape2D" id=3]
radius = 9.92

[sub_resource type="Theme" id=4]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=6]

[node name="Bat" type="CharacterBody2D" groups=["Enemy", "EnemyNoAnim"]]
light_mask = 2
position = Vector2( 45, 52 )
collision_layer = 2
collision_mask = 2
script = ExtResource( 7 )

[node name="Pivot" type="Node2D" parent="."]
position = Vector2( 0, -13 )
scale = Vector2( 1.49933, 1.77866 )

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
modulate = Color( 0.729412, 0.0235294, 0.898039, 1 )
light_mask = 3
scale = Vector2( 0.3, 0.3 )
frames = SubResource( 1 )
frame = 1
playing = true

[node name="SpriteTimer" type="Timer" parent="AnimatedSprite2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="." groups=["Enemy"]]
visible = false
position = Vector2( 0, -9 )
scale = Vector2( 2, 2.5 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 1.13687e-13, 3 )
scale = Vector2( 0.877177, 0.933302 )
shape = SubResource( 3 )

[node name="SpriteEfecto" type="Sprite2D" parent="."]
light_mask = 2
position = Vector2( 0.0250006, -25.5 )
scale = Vector2( 0.193396, 0.141026 )
texture = ExtResource( 3 )

[node name="Barra_vida" type="Control" parent="."]
offset_top = -44.0
offset_right = 40.0
offset_bottom = -4.0

[node name="BarraVida" type="Sprite2D" parent="Barra_vida"]
light_mask = 2
position = Vector2( 1.025, 24.5 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 2 )

[node name="ProgressBar" type="ProgressBar" parent="Barra_vida/BarraVida"]
light_mask = 2
anchor_right = 0.407
anchor_bottom = 0.755
offset_left = -70.0
offset_top = -3.0
offset_right = 10.171
offset_bottom = -6.06
theme = SubResource( 4 )
theme_override_styles/fg = SubResource( 5 )
theme_override_styles/bg = SubResource( 6 )
max_value = 10.0
step = 1.0
value = 10.0
percent_visible = false

[node name="Barra_vida_timer" type="Timer" parent="Barra_vida"]

[node name="Hit_timer" type="Timer" parent="."]
wait_time = 0.2

[node name="FireTick" type="Timer" parent="."]

[node name="Cooldown" type="Timer" parent="."]

[node name="PointLight2D" type="PointLight2D" parent="."]
visible = false
texture = ExtResource( 8 )
texture_scale = 0.2
color = Color( 0.568627, 0.52549, 0.737255, 1 )
energy = 0.9
range_item_cull_mask = 2
shadow_gradient_length = 3.0
shadow_filter = 2
shadow_filter_smooth = 50.0
shadow_item_cull_mask = 2

[connection signal="timeout" from="AnimatedSprite2D/SpriteTimer" to="." method="_on_SpriteTimer_timeout"]
[connection signal="timeout" from="Barra_vida/Barra_vida_timer" to="." method="_on_Barra_vida_timer_timeout"]
[connection signal="timeout" from="Hit_timer" to="." method="_on_Hit_timer_timeout"]
[connection signal="timeout" from="FireTick" to="." method="_on_FireTick_timeout"]
[connection signal="timeout" from="Cooldown" to="." method="_on_Cooldown_timeout"]
